2007-11-17  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8/oci8.rb: OCI8::Cursor#fetch_hash accepts a block now.
	* test/test_oci8.rb: add a test for fetch_hash with a block.
	* ext/oci8/metadata.c: fix for 64-bit windows.

2007-11-12  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/stmt.c, lib/oci8/oci8.rb: add OCI8::Cursor#column_metadata.
	* ext/oci8/metadata.c, ext/oci8/oci8.h, ext/oci8/stmt.c: Change
	   the lifetime of OCI8::Metadata::Base. It depended on the connection,
	   but now it depends on what it describes. For example OCI8::cursor
	   for OCI8::Cursor#column_metadata.
	* ext/oci8/env.c, ext/oci8/oci8.c, ext/oci8/oci8.h, ext/oci8/oci8lib.c,
	   ext/oci8/oraconf.rb, setup.rb: fix for ruby 1.9. Not full tests are
	   not passed on ruby 1.9.

2007-11-11  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.c, lib/oci8/metadata.rb, test/test_datetime.rb:
	   suppress warnings 'instance variable @xxxx not initialized' when
	   running ruby with '-w' option. (suggested by Daniel Berger.)

2007-11-11  KUBO Takehiro  <kubo@jiubao.org>
	* test/config.rb, test/test_dbi.rb, test/test_oci8.rb:
	   add 'purge' option to 'drop table' statement when Oracle 10g
	   or upper.
	* ext/oci8/bind.c: add OCI8::BindType::BinaryDouble when SQLT_BDOUBLE
	   is defined.
	* lib/oci8/compat.rb: add OCI8::SQLT_IBFLOAT, OCI8::SQLT_IBDOUBLE and
	   OCI8::SQLT_BFILE for compatibility with 1.0.
	* lib/oci8/metadata.rb, lib/oci8/object.rb, lib/oci8/oci8.rb:
	   rename :bfloat and :bdouble to :binary_float and :binary_double
	   respectively.
	* lib/oci8/oci8.rb: use OCI8::BindType::BinaryDouble for :binary_float
	   and :binary_double column when BinaryDouble is available.
	* test/test_oci8.rb: bind as binary_double explicitly in
	   test_binary_float.

2007-10-15  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8/object.rb: quick fix to get and set object
	   attributes without explicitly setting default_connection.
	   I am now wavering about what to do.
