@@ -16,6 +16,7 @@ require "#{srcdir}/test_break"
 require "#{srcdir}/test_oci8"
 require "#{srcdir}/test_datetime"
 require "#{srcdir}/test_connstr"
+require "#{srcdir}/test_metadata"
 
 # Ruby/DBI
 begin
